--- a/html/cookies.html
+++ b/html/cookies.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/92bffe401f.js" crossorigin="anonymous"></script>
 </head>
-<body id="Snacks">
+<body class="cakes">
     <header id="cake">
         <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
         <p id="c1">COOKIES</p>
