--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Hand+Pre:wght@400..700&family=Pacifico&family=Permanent+Marker&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/92bffe401f.js" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="cakes">
     
     <header id="home">
         <div id="logo">
